Added link, semicolon in css, link style update

--- a/Assignments/Module-2/site/index.html
+++ b/Assignments/Module-2/site/index.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <title>Responsive Layout</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="styles.css" />
+  </head>
+  <body>
+    <h1>Our Menu</h1>
 
-<title>Responsive Layout</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="styles.css">
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <div class="box">
+        <p class="content-name name1">Chicken</p>
+        <p class="content">
+          "Chicken", typically refers to the common domesticated fowl raised for
+          meat and eggs. It is a staple food in many cultures worldwide and is
+          widely consumed due to its low cost, versatility, and nutritional
+          value. Chicken can be prepared in a variety of ways, such as grilled,
+          roasted, fried, or baked, and is commonly used in soups, stews, and
+          curries.
+        </p>
+      </div>
+    </div>
 
-</head>
-<body>
-<h1>Our Menu</h1>
+    <div class="col-lg-4 col-md-6 col-sm-12">
+      <div class="box">
+        <p class="content-name name2">Beef</p>
+        <p class="content">
+          Beef is meat that comes from cattle, primarily cows. It is a rich
+          source of protein, iron, and various other nutrients. Beef can be
+          consumed in various forms, including steaks, ground beef, roasts, and
+          jerky. However, its high saturated fat content has been linked to
+          health concerns, and there are ethical and environmental concerns
+          related to the beef industry.
+        </p>
+      </div>
+    </div>
 
-
-
-  <div class="col-lg-4 col-md-6 col-sm-12">
-  	<div class="box">
-  		<p class="content-name name1">Chicken</p>
-  		<p class="content">"Chicken", typically refers to the common domesticated fowl raised for meat and eggs. It is a staple food in many cultures worldwide and is widely consumed due to its low cost, versatility, and nutritional value. Chicken can be prepared in a variety of ways, such as grilled, roasted, fried, or baked, and is commonly used in soups, stews, and curries.</p>
-  	</div>
-  </div>
-
-  <div class="col-lg-4 col-md-6 col-sm-12">
-  	<div class="box">
-   		<p class="content-name name2">Beef</p>
-   		<p class="content">Beef is meat that comes from cattle, primarily cows. It is a rich source of protein, iron, and various other nutrients. Beef can be consumed in various forms, including steaks, ground beef, roasts, and jerky. However, its high saturated fat content has been linked to health concerns, and there are ethical and environmental concerns related to the beef industry.</p>
-  	</div>
-  </div>
-
-  <div class="col-lg-4 col-md-12 col-sm-12">
-  	<div class="box">
-  		<p class="content-name name3">Sushi</p>
-  		<p class="content">Sushi is a traditional Japanese dish made of vinegar-seasoned rice combined with raw or cooked seafood, vegetables, and other ingredients. It is typically served with soy sauce, wasabi, and pickled ginger, and can be enjoyed as bite-sized rolls, nigiri, or sashimi. Sushi has become popular worldwide for its unique flavors and aesthetic presentation.</p>
-  	</div>	
-  </div>
-
-</body>
+    <div class="col-lg-4 col-md-12 col-sm-12">
+      <div class="box">
+        <p class="content-name name3">Sushi</p>
+        <p class="content">
+          Sushi is a traditional Japanese dish made of vinegar-seasoned rice
+          combined with raw or cooked seafood, vegetables, and other
+          ingredients. It is typically served with soy sauce, wasabi, and
+          pickled ginger, and can be enjoyed as bite-sized rolls, nigiri, or
+          sashimi. Sushi has become popular worldwide for its unique flavors and
+          aesthetic presentation.
+        </p>
+      </div>
+    </div>
+  </body>
 </html>
